--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="hero-container">
         <div class="hero-content">
             <h1>We Buy Truck Parking Lots!</h1>
-            <p>Own a family-run truck parking business in the Central Valley? Ready to retire? Get a fair deal from us, not private equity!</p>
+            <p>Own a truck parking business in the Central Valley? Ready to retire? Get a fair deal from us, not private equity!</p>
         </div>
         <div class="contact">
             <div class="btn-container">
